# ecom-customer-support

./: Dockerfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
config/: config.yaml  config_loader.py
data/: flipkart_product_review.csv
data_ingestion/: ingestion.py  ingestion_pipeline.py
notebook/: custmor_support.ipynb
retriever/: retrieval.py
utils/: config_loader.py  model_loader_bb.py
