[project]
name = "class40project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "config>=0.5.1",
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "langchain>=1.3.1",
    "langchain-astradb>=1.0.0",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "utils>=1.0.2",
    "uvicorn>=0.47.0",
]

[tool.uv.workspace]
members = [
    ".",
    ".",
    ".",
]

[tool.uv.sources]
class40project = { workspace = true }

[dependency-groups]
dev = [
    "class40project",
    "config>=0.5.1",
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "langchain>=1.3.1",
    "langchain-astradb>=1.0.0",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "utils>=1.0.2",
    "uvicorn>=0.47.0",
]
